--- a/wilson.conf
+++ b/wilson.conf
@@ -61,12 +61,10 @@ Tiktok = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点
 [Rule]
 # 规则修正
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/Unbreak.list,DIRECT
-# 广告拦截
-RULE-SET,https://whatshub.top/rule/AntiAD.list,REJECT
 #Tiktok
 RULE-SET,https://whatshub.top/rule/TikTok.list,Tikok
 # 国际媒体
-RULE-SET,https://gitee.com/wilsongor/ssrule/raw/master/Media.list,国际媒体
+RULE-SET,https://raw.githubusercontent.com/Wilsongorgor/Shadowsocketrule/refs/heads/main/Media.list,国际媒体
 # 港台番剧
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/StreamingSE.list,港台番剧
 # 国内媒体
