--- a/SSRule.conf
+++ b/SSRule.conf
@@ -46,7 +46,7 @@ Tiktok = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点
 # 自动选择
 自动选择 = url-test,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=50,timeout=5,select=0,policy-regex-filter=^
 # 香港节点
-香港节点 = url-test,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=50,timeout=5,select=0,policy-regex-filter=香港|港|HK|🇭🇰
+香港节点 = url-test,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=50,timeout=5,select=0,policy-regex-filter=香港|港|HK|
 # 台湾节点
 台湾节点 = url-test,url=http://www.gstatic.com/generate_204,interval=1800,tolerance=50,timeout=5,select=0,policy-regex-filter=台湾|台|TW|🇹🇼|(?i)Taiwan
 # 日本节点
