--- a/SSRule.conf
+++ b/SSRule.conf
@@ -61,6 +61,8 @@ Tiktok = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点
 [Rule]
 # 规则修正
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/Unbreak.list,DIRECT
+#BlockAD
+RULE-SET,https://whatshub.top/rule/AntiAD.list,REJECT
 #Tiktok
 RULE-SET,https://whatshub.top/rule/TikTok.list,Tikok
 # 国际媒体
