--- a/SSRule.conf
+++ b/SSRule.conf
@@ -63,6 +63,8 @@ Tiktok = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/Unbreak.list,DIRECT
 #BlockAD
 RULE-SET,https://whatshub.top/rule/AntiAD.list,REJECT
+#OKX
+RULE-SET,https://whatshub.top/rule/OKX.list,DIRECT
 #Tiktok
 RULE-SET,https://whatshub.top/rule/TikTok.list,Tikok
 # 国际媒体
