--- a/SSRule.conf
+++ b/SSRule.conf
@@ -64,7 +64,7 @@ RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shado
 #BlockAD
 RULE-SET,https://whatshub.top/rule/AntiAD.list,REJECT
 #OKX
-RULE-SET,https://whatshub.top/rule/OKX.list,香港节点
+RULE-SET,https://whatshub.top/rule/OKX.list,台湾节点
 #Tiktok
 RULE-SET,https://whatshub.top/rule/TikTok.list,Tikok
 # 国际媒体
