--- a/SSRule.conf
+++ b/SSRule.conf
@@ -1,4 +1,4 @@
-#Wilson自用Shadowrocket的配置
+# Shadowrocket: 2025-05-18 04:47:40
 [General]
 # 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12,100.64.0.0/10,  17.0.0.0/8, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, localhost, sequoia.apple.com, www.abchina.com.cn, iosapps.itunes.apple.com
@@ -27,18 +27,19 @@ private-ip-answer = true
 dns-direct-fallback-proxy = true
 # UDP策略不支持行为
 udp-policy-not-supported-behaviour = REJECT
+update-url = https://raw.githubusercontent.com/Wilsongorgor/Shadowsocketrule/refs/heads/main/SSRule.conf
 
 [Proxy Group]
 # 苹果服务
 苹果服务 = select,DIRECT,PROXY,自动选择,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 # 港台番剧
-港台番剧 = select,DIRECT,PROXY,香港节点,台湾节点,interval=86400,timeout=5,select=2,url=http://www.gstatic.com/generate_204
+港台番剧 = select,DIRECT,PROXY,香港节点,台湾节点,policy-select-name=台湾节点,interval=86400,timeout=5,select=2,url=http://www.gstatic.com/generate_204
 # 国内媒体
 国内媒体 = select,DIRECT,PROXY,香港节点,台湾节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 # 国际媒体
 国际媒体 = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,interval=600,timeout=5,select=2,url=http://www.gstatic.com/generate_204
 # Tiktok
-Tiktok = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,interval=600,timeout=5,select=2,url=http://www.gstatic.com/generate_204
+Tiktok = select,PROXY,DIRECT,自动选择,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,policy-select-name=自动选择,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 # 全球加速
 全球加速 = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,interval=600,timeout=5,select=2,url=http://www.gstatic.com/generate_204
 # 兜底
@@ -62,11 +63,13 @@ Tiktok = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点
 # 规则修正
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/Unbreak.list,DIRECT
 #BlockAD
-RULE-SET,https://whatshub.top/rule/AntiAD.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/AdBlock.list,REJECT
 #OKX
 RULE-SET,https://whatshub.top/rule/OKX.list,台湾节点
+#Microsoft
+RULE-SET,https://whatshub.top/rule/Microsoft.list,DIRECT
 #Tiktok
-RULE-SET,https://whatshub.top/rule/TikTok.list,Tikok
+RULE-SET,https://whatshub.top/rule/TikTok.list,TIKOK
 # 国际媒体
 RULE-SET,https://raw.githubusercontent.com/Wilsongorgor/Shadowsocketrule/refs/heads/main/Media.list,国际媒体
 # 港台番剧
