--- a/SSRule.conf
+++ b/SSRule.conf
@@ -64,6 +64,8 @@ Tiktok = select,PROXY,DIRECT,自动选择,台湾节点,日本节点,韩国节点
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/Unbreak.list,DIRECT
 #BlockAD
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/AdBlock.list,REJECT
+#Copilot
+RULE-SET,https://whatshub.top/rule/Copilot.list,台湾节点
 #OKX
 RULE-SET,https://whatshub.top/rule/OKX.list,台湾节点
 #Microsoft
