--- a/SSRule.conf
+++ b/SSRule.conf
@@ -73,7 +73,7 @@ RULE-SET,https://raw.githubusercontent.com/Wilsongorgor/Shadowsocketrule/refs/he
 #高德
 RULE-SET,https://whatshub.top/rule/GaoDe.list,DIRECT
 #Tiktok
-RULE-SET,https://whatshub.top/rule/TikTok.list,TIKTOK
+RULE-SET,https://whatshub.top/rule/TikTok.list,日本节点
 # 国际媒体
 RULE-SET,https://raw.githubusercontent.com/Wilsongorgor/Shadowsocketrule/refs/heads/main/Media.list,国际媒体
 # 港台番剧
