--- a/SSRule.conf
+++ b/SSRule.conf
@@ -74,6 +74,8 @@ RULE-SET,https://raw.githubusercontent.com/Wilsongorgor/Shadowsocketrule/refs/he
 RULE-SET,https://whatshub.top/rule/GaoDe.list,DIRECT
 #Tiktok
 RULE-SET,https://whatshub.top/rule/TikTok.list,日本节点
+#openai
+RULE-SET,https://whatshub.top/rule/OpenAI.list,美国节点
 # 国际媒体
 RULE-SET,https://raw.githubusercontent.com/Wilsongorgor/Shadowsocketrule/refs/heads/main/Media.list,国际媒体
 # 港台番剧
