--- a/SSRule.conf
+++ b/SSRule.conf
@@ -90,6 +90,8 @@ RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shado
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/LAN.list,DIRECT
 # 国内规则
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Matrix-io/master/Shadowrocket/Ruleset/GEOIPCN.list,DIRECT
+# Gemini
+RULE-SET,https://whatshub.top/rule/Gemini.list,美国节点
 # 最终规则
 FINAL,法外狂徒
 
